--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         </div>
     </section>
     <section class="characters">
+        <h2 class="title">Conheça nossos heróis</h2>
         <nav class="characters__tabs">
             <button data-tab-button="homelander" class="characters__tabs__button characters__tabs__button--is-active">
                 Capitão Pátria
